Move sticky header shadow down to prevent/reduce visual bug
Prevent/reduce the visual bug where the header shadow appears above the
website header. This bug was found in Chromium-based browsers and
appears to be caused by slower rendering updates, in particular due to
the large amount of elements on the page.

The problem was "fixed" by having the starting position of the shadow's
element be lower on the page, as a result it won't move up as far on the
page, preventing (or at least reducing the precense) of the bug.

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -274,11 +274,11 @@ a {
 /* Control */
 
 .sticky-header-shadow {
-  box-shadow: 0 3px 1px 0 var(--color-shadows);
+  box-shadow: 0 4px 1px 0 var(--color-shadows);
   height: 1px;
   position: sticky;
   width: 100%;
-  top: 3.85rem;
+  top: 3.75rem;
   z-index: 9;
 }
 @media (max-width: 640px) {
